--- a/04.CSS Box Model/L4_04_Navigation-inline-block/index.html
+++ b/04.CSS Box Model/L4_04_Navigation-inline-block/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-        <span class="title">SITE TITLE</span>
+        <h1>SITE TITLE</h1>
       <nav>
           <ul>
               <li> <a href="#">Home</a></li>
