--- a/Exams/28.03.2020/02. Beats/index.html
+++ b/Exams/28.03.2020/02. Beats/index.html
@@ -1,54 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Beats</title>
-</head>
-<body>
+  </head>
+  <body>
     <header class="page-header">
-        <nav class="page-header-nav">
-            <ul class="page-header-nav-list">
-                <li class="page-header-nav-list-item"><a href="#">products</a></li>
-                <li class="page-header-nav-list-item"><a href="#">about us</a></li>
-                <li class="page-header-nav-list-item"><a href="#">supports</a></li>
-                <li class="page-header-nav-list-item"><a href="#">explores</a></li>
-            </ul>
-        </nav>
+      <nav class="page-header-nav">
+        <ul class="page-header-nav-list">
+          <li class="page-header-nav-list-item"><a href="#">products</a></li>
+          <li class="page-header-nav-list-item"><a href="#">about us</a></li>
+          <li class="page-header-nav-list-item"><a href="#">supports</a></li>
+          <li class="page-header-nav-list-item"><a href="#">explores</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <section class="solo-wireless">
-            <article class="solo-wireless-info">
-                <h2 class="solo-wireless-info-title">solo wireless</h2>
-                <p class="solo-wireless-info-text">With up to 40 hours of battery life, Beats Solo Wireless is
-                    your perfect everyday headphone. Get the most out of your
-                    music with an award-winning, emotionally charged Beats
-                    listening experience.</p>
-                <button class="solo-wireless-info-btn">view more</button>
-            </article>
-            <article class="solo-wireless-img">
-                <img src="./images/beats-landing-main.jpg" alt="">
-            </article>
-        </section>
-        <section class="powerbeats">
-            <article class="powerbeats-img">
-                <img src="./images/powerbeats.png" alt="">
-            </article>
-            <article class="powerbeats-info">
-                <h2 class="powerbeats-info-title">powerbeats</h2>
-                <p class="powerbeats-info-subtitle"> <strong class="powerbeats-info-subtitle-emphasis">performance.</strong> power. freedom</p>
-                <p class="powerbeats-info-text">Powerbeats3 earphones are ready for any challenge with
-                    up to 12 hours of battery life to fuel multiple long
-                    workouts and powerful, dynamic sound
-                    to keep you pushing.</p>
-                    <article class="powerbeats-info-cta">
-                        <h2 class="powerbeats-info-cta-price">$199.95</h2>
-                        <button class="powerbeats-info-cta-btn">buy now</button>
-                    </article>
-            </article>
-        </section>
+      <section class="solo-wireless">
+        <article class="solo-wireless-info">
+          <h2 class="solo-wireless-info-title">solo wireless</h2>
+          <p class="solo-wireless-info-text">
+            With up to 40 hours of battery life, Beats Solo Wireless is your
+            perfect everyday headphone. Get the most out of your music with an
+            award-winning, emotionally charged Beats listening experience.
+          </p>
+          <button class="solo-wireless-info-btn">view more</button>
+        </article>
+        <article class="solo-wireless-img">
+          <img src="./images/beats-landing-main.jpg" alt="" />
+        </article>
+      </section>
+      <section class="powerbeats">
+        <article class="powerbeats-img">
+          <img src="./images/powerbeats.png" alt="" />
+        </article>
+        <article class="powerbeats-info">
+          <h2 class="powerbeats-info-title">powerbeats</h2>
+          <p class="powerbeats-info-subtitle">
+            <strong class="powerbeats-info-subtitle-emphasis"
+              >performance.</strong
+            >
+            power. freedom
+          </p>
+          <p class="powerbeats-info-text">
+            Powerbeats3 earphones are ready for any challenge with up to 12
+            hours of battery life to fuel multiple long workouts and powerful,
+            dynamic sound to keep you pushing.
+          </p>
+          <article class="powerbeats-info-cta">
+            <h2 class="powerbeats-info-cta-price">$199.95</h2>
+            <button class="powerbeats-info-cta-btn">buy now</button>
+          </article>
+        </article>
+      </section>
+      <section class="try">
+        <article class="try-info">
+          <img src="./images/beats-logo-small-white.png" alt="" />
+          <h2 class="try-title">
+            try 3 months beats music <strong class="try-title-cta">free</strong>
+          </h2>
+        </article>
+        <a href="#">read more ></a>
+      </section>
+      <section class="give-life">
+        <article class="give-life-img">
+          <img src="./images/beats-girl.png" alt="" />
+        </article>
+        <article class="give-life-info">
+          <article class="give-life-info-text">
+            <h2 class="give-life-info-text-title">give life</h2>
+            <h4 class="give-life-info-text-subtitle">beats <span>red</span></h4>
+          </article>
+          <article class="give-life-info-text-img">
+            <img src="./images/beats-red.png" alt="" />
+          </article>
+        </article>
+      </section>
     </main>
-</body>
+    <footer class="page-footer">
+      <p>Beats by Dre, 2017 ©</p>
+    </footer>
+  </body>
 </html>
